--- a/html/ProductPage.html
+++ b/html/ProductPage.html
@@ -62,7 +62,7 @@
                     <textarea class="input-white-background" rows="4" cols="50" name="review" id="review">
                 </textarea>
                     <button id="add-review-btn" onclick="addReview()">Add Review</button>
-                    <div id="processing-btn" onclick="addReview()"
+                    <div id="processing-btn"
                          class="ui-btn ui-shadow ui-corner-all processing-btn ">
                         <img src="../Resources/images/loader.gif"
                              style="display: inline-block;width: 33px;height: 33px;" alt="">
