--- a/html/fashion.html
+++ b/html/fashion.html
@@ -18,15 +18,25 @@
 <body>
 <div data-role="page" data-theme="d" id="page-content">
     <div data-role="header" class="header-class">
-        <button class="btn-home" data-role="button" data-shadow="false" data-theme="none">
-            <img src="../Resources/images/Logos/Transparent.png" border="0"/>
-        </button>
-        <h1 class="header-title"></h1>
+        <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
+            <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
+                    data-theme="none">
+                <img src="../Resources/images/logos/Transparent.png" border="0">
+            </button>
 
-        <button class="btn-userprofile" data-role="button" data-shadow="false" data-theme="none">
-            <img src="../Resources/images/icons/header-userprofile.png" border="0"/>
-        </button>
+            <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
+
+            <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
+                    data-theme="none">
+                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+            </button>
+            <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
+                    data-theme="none">
+                <img src="../Resources/images/icons/header-userprofile.png" border="0">
+            </button>
+        </div>
     </div>
+
 
     <div class="navbar-header" data-role="navbar">
         <!-- /navbar -->
