--- a/html/Cart.html
+++ b/html/Cart.html
@@ -19,24 +19,20 @@
     <div data-role="page" data-theme="d">
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
-                <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
-                        data-theme="none">
-                    <img src="../Resources/images/logos/Transparent.png" border="0">
-                </button>
+                <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/logos/Transparent.png" border="0">
+            </button>
 
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
 
-                <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
-                        data-theme="none">
-                    <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
-                </button>
-                <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
-                        data-theme="none">
-                    <img src="../Resources/images/icons/header-userprofile.png" border="0">
-                </button>
+                <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+            </button>
+                <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/header-userprofile.png" border="0">
+            </button>
             </div>
         </div>
-
 
         <div class="navbar-header" data-role="navbar">
             <!-- /navbar -->
@@ -47,6 +43,7 @@
                 <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
             </ul>
         </div>
+
         <div id="btn-checkout">
 
         </div>
@@ -75,31 +72,29 @@
                 <ul>
                     <li>
                         <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px"
-                                height="35px" />
-                        </button>
+                        <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
+                        </a>
                     </li>
                     <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
                             <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
-                        </button>
+                        </a>
                     </li>
                     <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
                             <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
-                        </button>
+                        </a>
                     </li>
                     <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px"
-                                height="35px" />
-                        </button>
+                        <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
+                        </a>
                     </li>
                     <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
                             <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
-                        </button>
+                        </a>
                     </li>
                 </ul>
             </div>
