--- a/html/UserProfile.html
+++ b/html/UserProfile.html
@@ -18,19 +18,16 @@
     <div data-role="page">
         <div role="main" class="login ui-content">
 
-            <img class="User-registration Ipad-logo-size logo-image" src="../Resources/images/Logos/Transparent.png"
-                alt="User Icon">
+            <img class="User-registration Ipad-logo-size logo-image" src="../Resources/images/Logos/Transparent.png" alt="User Icon">
 
             <label class="orange-label" for="username">Username</label>
             <label class="orange-label" for="username">Email</label>
 
             <input class="input-white-background" type="text" name="Email" id="Email" placeholder="Email" value="">
             <label class="login-labels orange-label" for="password">Password</label>
-            <input class="input-white-background" type="text" name="password" id="password" placeholder="Password"
-                value="">
+            <input class="input-white-background" type="text" name="password" id="password" placeholder="Password" value="">
             <label class="login-labels orange-label" for="password">Confirm Password</label>
-            <input class="input-white-background" type="text" name="Confirm Password" id="Confirm Password"
-                placeholder="Confirm Password" value="">
+            <input class="input-white-background" type="text" name="Confirm Password" id="Confirm Password" placeholder="Confirm Password" value="">
 
             <div class=" button-container">
                 <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Update
@@ -39,7 +36,8 @@
 
         </div>
         <p class="User-Profile-Edit Register-Account-Text"><a href="Login.html">Back to Home</a></p>
-    </div><!-- /content -->
+    </div>
+    <!-- /content -->
 </body>
 
 </html>
