--- a/html/Catagories.html
+++ b/html/Catagories.html
@@ -19,21 +19,18 @@
     <div data-role="page" data-theme="d">
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
-                <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
-                        data-theme="none">
-                    <img src="../Resources/images/logos/Transparent.png" border="0">
-                </button>
+                <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/logos/Transparent.png" border="0">
+            </button>
 
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
 
-                <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
-                        data-theme="none">
-                    <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
-                </button>
-                <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false"
-                        data-theme="none">
-                    <img src="../Resources/images/icons/header-userprofile.png" border="0">
-                </button>
+                <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+            </button>
+                <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/header-userprofile.png" border="0">
+            </button>
             </div>
         </div>
 
@@ -60,42 +57,40 @@
 
         </div>
 
-        <div class="page-footer footer-class" data-role="footer"
-            style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
+        <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
             <div data-role="navbar" data-iconpos="bottom">
                 <ul>
                     <li>
                         <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px"
-                                height="35px" />
-                        </button>
+                        <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
+                        </a>
                     </li>
                     <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
                             <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
-                        </button>
+                        </a>
                     </li>
                     <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
                             <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
-                        </button>
+                        </a>
                     </li>
                     <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px"
-                                height="35px" />
-                        </button>
+                        <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
+                        </a>
                     </li>
                     <li>
-                        <button onclick="navigateToCategories()" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
                             <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
-                        </button>
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
-    </div><!-- /content -->
+    </div>
+    <!-- /content -->
 </body>
 <script type="text/javascript" src="../js/Categories.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
