--- a/html/leaderboard.html
+++ b/html/leaderboard.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Fashion</title>
+    <title>Leaderboard</title>
     <link rel="stylesheet" href="../Resources/themes/main/Main-Theme.css" />
     <link rel="stylesheet" href="../Resources/themes/innerTheme/HomePage.css" />
     <link rel="stylesheet" href="../Resources/themes/main/jquery.mobile.icons.min.css" />
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-    <div data-role="page" data-theme="d" id="page-content">
+    <div data-role="page" data-theme="d" idPag="page-content">
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
                 <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
@@ -43,18 +44,52 @@
                 <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
             </ul>
         </div>
-        <div role="main" class="favourites ui-content">
-            <div class="loader">
-                <img class="loader-gif" src="./../Resources/images/giphy.gif" />
-                <p>The goodest bois are finding the products..</p>
-            </div>
-            <div class="main products-items"></div>
 
-            <br />
-            <br />
-            <br />
-            <br />
+
+        <div role="main" class="leaderboard ui-content">
+            <div class="shinny-header">
+                <H1 style="text-align: center;">SCAN & WIN</H1>
+                <p>
+                    suck a pickle suck a pickle suck a pickle suck a pickle suck a pickle suck a pickle suck a pickle suck a picklev suck a pickle suck a picklevv suck a picklev fd
+                </p>
+            </div>
+            <div class="main-grid-for-topuser">
+                <div class="item">
+                    <img class="leaderboard-user-icon  logo-image" src="../Resources/images/icons/header-userprofile.png" alt="User Icon">
+                    <h4 class="user-game-points" style="line-height: 0px;">Points : 500000</h4>
+                </div>
+            </div>
+            <div class="main-grid-for-second-third-user">
+                <div class="item--second-third">
+                    <img class="leaderboard-user-icon-second-third   logo-image" src="../Resources/images/icons/user.png" alt="User Icon">
+                    <h4 class="user-game-points" style="line-height: 0px;">Points : 500000</h4>
+                </div>
+
+                <div class="item--second-third">
+                    <img class="leaderboard-user-icon-second-third  logo-image" src="../Resources/images/icons/user.png" alt="User Icon">
+                    <h4 class="user-game-points" style="line-height: 0px;">Points : 500000</h4class="user-game-points">
+                        <br>
+                </div>
+            </div>
+            <div class="leaderboard-participants ui-content">
+                <div class="user-leaderboard">
+                    <p class="price">4th</p>
+                    <p class="price">Rasheen Ruwisha</p>
+                    <p class="user-point  float-price" style="color: #EF963A;">100000</p>
+                </div>
+
+                <br>
+                <div class="user-leaderboard">
+                    <p class="price">4th</p>
+                    <p class="price">Rasheen Ruwisha</p>
+                    <p class="user-point  float-price" style="color: #EF963A;m">100000</p>
+                </div>
+            </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
 
         <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
             <div data-role="navbar" data-iconpos="bottom">
@@ -89,11 +124,11 @@
             </div>
         </div>
     </div>
-    <!-- /content -->
 </body>
-<script type="text/javascript" src="../js/PromotionProducts.js"></script>
+<script type="text/javascript" src="../js/CategoryProducts.js"></script>
+<script type="text/javascript" src="../js/Categories.js"></script>
+<script type="text/javascript" src="../js/ProductPage.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
-
 <script>
     $("#page-content").on("swiperight", function(e) {
         $.mobile.back();
