--- a/html/search.html
+++ b/html/search.html
@@ -18,14 +18,20 @@
 <body>
     <div data-role="page" data-theme="d">
         <div data-role="header" class="header-class">
-            <button class="btn-home" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/Logos/Transparent.png" border="0" />
+            <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
+                <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/logos/Transparent.png" border="0">
             </button>
-            <h1 class="header-title">Search</h1>
 
-            <button class="btn-userprofile" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/header-userprofile.png" border="0" />
+                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
+
+                <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
             </button>
+                <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/header-userprofile.png" border="0">
+            </button>
+            </div>
         </div>
 
         <div class="navbar-header" data-role="navbar">
@@ -40,9 +46,9 @@
         <div role="main" class="favourites ui-content">
 
 
-                <div style="padding: 10px !important;" class="search-container">
-                        <input type="text" id="myInput" placeholder="Search for an item" title="Type item name" />
-                      </div>
+            <div style="padding: 10px !important;" class="search-container">
+                <input type="text" id="myInput" placeholder="Search for an item" title="Type item name" />
+            </div>
 
 
         </div>
@@ -53,43 +59,42 @@
         <br>
 
 
-  
 
-    <div class="page-footer footer-class" data-role="footer"
-        style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
-        <div data-role="navbar" data-iconpos="bottom">
-            <ul>
-                <li>
-                    <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
-                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
-                    </button>
-                </li>
-                <li>
-                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
-                    </button>
-                </li>
-                <li>
-                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
-                    </button>
-                </li>
-                <li>
-                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px"
-                            height="35px" />
-                    </button>
-                </li>
-                <li>
-                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
-                    </button>
-                </li>
-            </ul>
+
+        <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
+            <div data-role="navbar" data-iconpos="bottom">
+                <ul>
+                    <li>
+                        <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
+                        <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                            <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-    </div><!-- /content -->
+    <!-- /content -->
 </body>
 
 </html>
