--- a/html/fashion.html
+++ b/html/fashion.html
@@ -120,6 +120,7 @@
     </div>
     <!-- /content -->
 </body>
+<script type="text/javascript" src="../js/ProductPage.js"></script>
 <script type="text/javascript" src="../js/CategoryProducts.js"></script>
 <script type="text/javascript" src="../js/Categories.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
