--- a/html/fashion.html
+++ b/html/fashion.html
@@ -66,8 +66,12 @@
                 <p> The goodest bois are finding the products..</p>
             </div>
 
-            <div id="drop-select">
-
+            <div id="drop-select" style="display: none;">
+                 <select name="select-native-2" id="select-native-3" data-iconpos="right">
+                            <option value="1" style="width: 100px !important;">Price From Lowest to the Highest</option>
+                            <option value="2" style="width: 100px !important;">Price From Highest to the Lowest
+                    </option>
+                        </select>
             </div>
             <div class="ui-field-contain">
 
