New: Completed sotring

--- a/html/fashion.html
+++ b/html/fashion.html
@@ -68,6 +68,7 @@
 
             <div id="drop-select" style="display: none;">
                  <select name="select-native-2" id="select-native-3" data-iconpos="right">
+                            <option value="0" style="width: 100px !important;">No Filter</option>
                             <option value="1" style="width: 100px !important;">Price From Lowest to the Highest</option>
                             <option value="2" style="width: 100px !important;">Price From Highest to the Lowest
                     </option>
