--- a/html/search.html
+++ b/html/search.html
@@ -47,7 +47,29 @@
 
 
             <div style="padding: 10px !important;" class="search-container">
-                <input type="text" id="myInput" placeholder="Search for an item" title="Type item name" />
+                <form  id="search-from">
+                    <input type="search" id="search-text" placeholder="Search for an item" title="Type item name" />
+                </form>
+             
+            </div>
+
+            <div class="search">
+                <img class="loader-gif" src="./../Resources/images/search.gif">
+                <p>Lets find some products..</p>
+            </div>
+
+            <div class="loader" style="display: none;">
+                <img class="loader-gif" src="./../Resources/images/giphy.gif">
+                <p> The goodest bois are finding the products..</p>
+            </div>
+
+            <div class="ui-field-contain">
+
+            </div>
+
+
+            <div class="main products-items">
+
             </div>
 
 
@@ -96,5 +118,5 @@
     </div>
     <!-- /content -->
 </body>
-
+<script src='../js/Search.js'></script>
 </html>
